# testS

SLAE-main-master/: CMakeLists.txt
SLAE-main-master/gtest/: CMakeLists.txt  CompressedMatrixTest.cpp  GausZeid_mpi_YacobiTest.cpp  Iteration_methods.cpp  IterationsTest.cpp  KR2.cpp  MPI_Chebishev.cpp  Related_directions_method.cpp  ThreeDiagTest.cpp  fastest_grad_descent_test.cpp
SLAE-main-master/src/: CMakeLists.txt  Vector.h
SLAE-main-master/src/Compressed/: CompressedMatrix.h  CompressedSorting.h
SLAE-main-master/src/Compressed_spars_row/: CompressedMatrix.h  CompressedSorting.h
SLAE-main-master/src/Iteration_methods/: ChebishevMPI.h  GMRES.h  Grad_spusk.h  Iteration_methods.h  Related_directions_method.h  SymGZ.h  Symmetric_G_Z.h
SLAE-main-master/src/Matrices/: csr_matrics.h  dense_matrics.h  dense_matrix.h
SLAE-main-master/src/Tridiagonal/: ThreeDiagonalMatrix.h  ThreeDiagonalSolver.h  five_diag.h
SLAE-main-master/src/operator/: Operators.h  vecandmatr.h
SLAE-main-master/src/rv_to_Kepler/: rv_to_Kepler.h
SLAE-main-master/tests/: CMakeLists.txt  GausZeid_mpi_YacobiTest.cpp  IterationsTest.cpp  MPI_Chebishev.cpp  ThreeDiagTest.cpp
